<resources>
    <string name="app_name">CynoClient</string>
    <string name="navigation_drawer_open">Ouvrir le menu de navigation</string>
    <string name="navigation_drawer_close">Fermer le menu de navigation</string>
    <string name="nav_header_title">What The Dog</string>
    <string name="nav_header_subtitle">info@whatthedog.ch</string>
    <string name="nav_header_desc">Logo What The Dog</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_clients">Clients</string>
    <string name="light_mode">Mode Jour</string>
    <string name="dark_mode">Mode Nuit</string>
    <string name="content_description_light_mode">Changer vers le mode jour</string>
    <string name="content_description_dark_mode">Changer vers le mode nuit</string>
    <string name="menu_dogs">Chiens</string>
    <string name="menu_diseases">Maladies</string>
    <string name="first_name">Prénom</string>
    <string name="noun">Nom de la maladie</string>
    <string name="description">Description</string>
    <string name="symptoms">Symptomes</string>
    <string name="preventive">Prévention</string>
    <string name="curative">Curative</string>
    <string name="vaccinable">Vaccinable</string>
    <string name="zoonosis">Zoonose</string>
    <string name="last_name">Nom</string>
    <string name="contact_info">Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="client_header_contacts">Contact</string>
    <string name="client_header_dogs">Chiens</string>
    <string name="no_dogs">Aucun chien pour ce client</string>

    <string name="full_name_format">%s %s</string>
    <string name="address_format">%s, %d %s</string>
    <string name="menu_clients_details">Détails du client</string>
    <string name="menu_diseases_details">Détails de la maladie</string>
    <string name="menu_clients_new">Nouveau client</string>
    <string name="header_new_client">Nouveau client</string>
    <string name="menu_diseases_new">Nouvelle maladie</string>
    <string name="header_new_disease">Nouvelle maladie</string>
    <string name="female">Femme</string>
    <string name="male">Homme</string>
    <string name="header_gender">Genre</string>
    <string name="email">Email</string>
    <string name="phone">Téléphone</string>
    <string name="address">Adresse</string>
    <string name="locality">NPA</string>
</resources>