<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:layout_weight="1">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:stretchColumns="*"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.client.ClientFragment"
    android:id="@+id/clients_table"
>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/first_name_header"
            android:padding="3dip"
            android:text="@string/first_name"
        />

        <TextView
            android:id="@+id/last_name_header"
            android:padding="3dip"
            android:text="@string/last_name"
        />

        <TextView
            android:id="@+id/contact_info_header"
            android:padding="3dip"
            android:text="@string/contact_info"
        />
    </TableRow>
</TableLayout>
</LinearLayout>
</ScrollView>