<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_clients">

    <fragment
        android:id="@+id/nav_clients"
        android:name="ch.leytto.cynoclient.ui.client.ClientFragment"
        android:label="@string/menu_clients"
        tools:layout="@layout/fragment_clients_list" >
        <action
            android:id="@+id/action_nav_clients_to_clientDetails"
            app:destination="@id/clientDetails" />
    </fragment>

    <fragment
        android:id="@+id/nav_dogs"
        android:name="ch.leytto.cynoclient.ui.dog.DogFragment"
        android:label="@string/menu_dogs"
        tools:layout="@layout/fragment_dogs_list" />

    <fragment
        android:id="@+id/nav_diseases"
        android:name="ch.leytto.cynoclient.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_diseases"
        tools:layout="@layout/fragment_diseases_list" />
    <fragment
        android:id="@+id/clientDetails"
        android:name="ch.leytto.cynoclient.ui.client.ClientDetailsFragment"
        android:label="fragment_client_details"
        tools:layout="@layout/fragment_client_details">
            <argument
                android:name="ARG_CLIENT_ID"
                app:argType="string"
                android:defaultValue=""
                />
    </fragment>
</navigation>