<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25px"
    tools:context=".ui.disease.DiseaseDetailsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_new_disease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_new_disease"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/turquoise" />

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/noun"

            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noun_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/anthracite"
                android:singleLine="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/description"

            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/anthracite"
                android:singleLine="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/symptoms"

            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/symptoms_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/anthracite"
                android:singleLine="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/preventive"

            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/preventive_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/anthracite"
                android:singleLine="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/curative"

            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/curative_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/anthracite"
                android:singleLine="true"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <RadioButton
            android:id="@+id/radio_vaccinable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vaccinable"
            android:layout_marginEnd="50dp"
            />

        <RadioButton
            android:id="@+id/radio_zoonosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoonosis"
            android:layout_marginEnd="50dp"
            />

    </LinearLayout>
    </ScrollView>
</FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_baseline_save_24"
        android:backgroundTint="@color/design_default_color_primary_variant"
    />

</androidx.coordinatorlayout.widget.CoordinatorLayout>