<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25px"
    tools:context=".ui.client.ClientDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/header_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_header_contacts"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/turquoise"/>

        <TextView
            android:id="@+id/email"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="5dp"
            android:autoLink="all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="email" />


        <TextView
            android:id="@+id/phone"
            android:drawableLeft="@drawable/ic_baseline_phone_android_24"
            android:drawablePadding="5dp"
            android:autoLink="all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="phone" />

        <TextView
            android:id="@+id/address"
            android:drawableLeft="@drawable/ic_baseline_place_24"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="address" />

        <TextView
            android:id="@+id/header_dogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/client_header_dogs"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/turquoise"/>

        <TextView
            android:id="@+id/notice_no_dogs"
            android:drawablePadding="5dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/no_dogs" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dog_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/dog_adapter"
            android:padding="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

</FrameLayout>